Trying importing libraries without bundlers (FAIL)

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style.css" type="text/css" /> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThreeJS Starter</title>
+    <title>IG PROJECT</title>
 </head>
 <body>
     <div class="container">
-        <h1>What? a sphere?</h1>
+        <h1>2020: Covid Escape</h1>
     </div>
     <canvas class="webgl"></canvas>
     <section></section>
+
+
+    <script type="module" src="main.js"></script>
 </body>
 </html>
